# GestureHueLight

./: .gitmodules  CMakeLists.txt  Hue  README.md  above.SLDPRT  html_input_signal.html  log.txt  shell.SLDPRT  whole simulation of hard ware.SLDPRT
GraytoPsecolor/: CMakeLists.txt  main.cpp  mywidget.cpp  mywidget.h
HueOnandOffCPP/: CMakeLists.txt  HueOnandOFF.cpp
QTpixeldemo/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  demo05  mywidget.cpp  mywidget.h
QTpixeldemo/demo05_autogen/: moc_predefs.h  mocs_compilation.cpp
QTpixeldemo/demo05_autogen/EWIEGA46WW/: moc_mywidget.cpp
bilinear/: main.cpp  mywidget.cpp  mywidget.h
camerabox_solidworks/: above.SLDPRT  below.SLDPRT  readme.md  shell.SLDPRT  whole simulation of hard ware.SLDPRT
pixel_auto_show/: mywidget.cpp  mywidget.h
pixeldemo/: CMakeLists.txt  main.cpp  mywidget.cpp
py_light_bulb_on_and_off/: hue.py  lightonoff.py
src/: CMakeLists.txt  HueOnandOFF.cpp  ansiprint.cpp  ansiprint.h  curlGet.cpp  curlGetOther.cpp  curlPost.cpp  curlPut.cpp  event.cpp  fileop.cpp  huefunc.cpp  main.cpp  main2.cpp  main_hue.cpp  mlx90640_driver.h  mywidget.cpp  mywidget.h  newuser.cpp  test.cpp  testm.cpp
src/hue/: fileop.cpp  fileop.h  hue.cpp  hue.h  huefunc.cpp  huefunc.h  newuser.cpp  newuser.h  testhue.cpp
src/mlx90640/: event.cpp  mlx90640_driver.cpp  mlx90640_driver.h
test/: CMakeLists.txt  ansitest.cpp  curlgettest.cpp  curlposttest.cpp  curlputtest.cpp  logtest.cpp  newusertest.cpp  sensortest.cpp
